--- a/client/src/app/components/sources/source-tag/source-tag.component.html
+++ b/client/src/app/components/sources/source-tag/source-tag.component.html
@@ -5,12 +5,11 @@
 </ng-container>
 
 <ng-template #tag>
-  <nz-tag *ngIf="enablePopover; else noPopover"
-    nz-popover
+  <nz-tag nz-popover
     [nzPopoverMouseEnterDelay]="this.onCloseClicked ? 0 : 0.5"
     [nzPopoverContent]="sourcePopover"
     nzPopoverPlacement="right"
-    nzPopoverTrigger="hover"
+    [nzPopoverTrigger]="enablePopover ? 'hover' : null"
     [(nzPopoverVisible)]="popoverVisible"
     [nzMode]="this.onCloseClicked ? 'closeable' : 'default'"
     (nzOnClose)="itemClosed($event)">
@@ -20,13 +19,6 @@
   <ng-template #sourcePopover>
     <cvc-source-popover [sourceId]="source.id"></cvc-source-popover>
   </ng-template>
-</ng-template>
-
-<ng-template #noPopover>
-  <nz-tag [nzMode]="this.onCloseClicked ? 'closeable' : 'default'"
-    (nzOnClose)="itemClosed($event)">
-    <ng-template [ngTemplateOutlet]="tagContent"></ng-template>
-  </nz-tag>
 </ng-template>
 
 <ng-template #unlinked>
@@ -40,10 +32,10 @@
     nzTwotoneColor="#F9BA45"></i>
   <ng-container *ngIf="this.mode === 'normal'; else concise">
     <ng-container *ngIf="truncateLongName">
-    {{ this.displayName | truncate: 50}}
+      {{ this.displayName | truncate: 50}}
     </ng-container>
     <ng-container *ngIf="!truncateLongName">
-    {{ this.displayName }}
+      {{ this.displayName }}
     </ng-container>
   </ng-container>
   <ng-template #concise>
