--- a/client/src/app/components/variant-types/variant-type-tag/variant-type-tag.component.html
+++ b/client/src/app/components/variant-types/variant-type-tag/variant-type-tag.component.html
@@ -5,12 +5,12 @@
 </ng-container>
 
 <ng-template #tag>
-  <nz-tag *ngIf="enablePopover; else noPopover"
+  <nz-tag
     nz-popover
     [nzPopoverMouseEnterDelay]="0.5"
     [nzPopoverContent]="variantTypePopover"
     nzPopoverPlacement="right"
-    nzPopoverTrigger="hover">
+    [nzPopoverTrigger]="enablePopover ? 'hover' : null">
     <ng-template [ngTemplateOutlet]="tagContent"></ng-template>
   </nz-tag>
   <ng-template #variantTypePopover>
