--- a/client/src/themes/global-variables.less
+++ b/client/src/themes/global-variables.less
@@ -16,6 +16,9 @@
 @white: #fff;
 @black: #000;
 
+// Status Colors
+@suggested-color: #fadb14;
+
 // Layout
 @layout-body-background: #f0f2f5;
 @layout-header-background: #001529;
@@ -41,6 +44,7 @@
 @text-color-inverse: @white;
 @icon-color: inherit;
 @icon-color-hover: fade(@black, 75%);
+@tag-default-color: @text-color;
 @heading-color: fade(@black, 85%);
 @text-color-dark: fade(@white, 85%);
 @text-color-secondary-dark: fade(@white, 65%);
