--- a/client/src/app/components/assertions/assertions-tag/assertion-tag.component.html
+++ b/client/src/app/components/assertions/assertions-tag/assertion-tag.component.html
@@ -5,13 +5,12 @@
 </ng-container>
 
 <ng-template #tag>
-  <nz-tag
+  <nz-tag [ngClass]="{ rejected: assertion.status === 'REJECTED', submitted: assertion.status === 'SUBMITTED', accepted: assertion.status === 'ACCEPTED' }"
     nz-popover
     [nzPopoverMouseEnterDelay]="0.5"
     [nzPopoverContent]="assertionPopover"
     nzPopoverPlacement="right"
-    [nzPopoverTrigger]="enablePopover ? 'hover' : null"
-    [nzColor]="assertion.status | colorNameForStatus">
+    [nzPopoverTrigger]="enablePopover ? 'hover' : null">
     <ng-template [ngTemplateOutlet]="tagContent"></ng-template>
   </nz-tag>
 
@@ -25,5 +24,10 @@
 </ng-template>
 
 <ng-template #tagContent>
-  <i nz-icon nzType="civic-assertion" nzTheme="twotone" nzTwotoneColor="#7243B5"></i> {{ assertion.name }}
+  <i nz-icon
+    nzType="civic-assertion"
+    nzTheme="twotone"
+    [nzTwotoneColor]="assertion.status === 'REJECTED' ? '#BBB' : '#7243B5'">
+  </i>
+  {{ assertion.name }}
 </ng-template>
