--- a/client/src/app/components/shared/icon-badges/icon-badges.component.html
+++ b/client/src/app/components/shared/icon-badges/icon-badges.component.html
@@ -1,4 +1,4 @@
 <ng-content></ng-content>
-<div class="cvc-badge badge-revisions"></div>
-<div class="cvc-badge badge-flags"></div>
-<div class="cvc-badge badge-comments"></div>
+<div *ngIf="hasRevisions" class="cvc-badge badge-revisions"></div>
+<div *ngIf="hasFlags" class="cvc-badge badge-flags"></div>
+<div *ngIf="hasComments" class="cvc-badge badge-comments"></div>
