--- a/client/src/app/views/molecular-profiles/molecular-profiles-home/molecular-profiles-home.page.html
+++ b/client/src/app/views/molecular-profiles/molecular-profiles-home/molecular-profiles-home.page.html
@@ -1,4 +1,5 @@
-<cvc-section-navigation [actionsTpl]="variantActions"> </cvc-section-navigation>
+<!-- <cvc-section-navigation [actionsTpl]="variantActions"> </cvc-section-navigation> -->
+<cvc-section-navigation> </cvc-section-navigation>
 <ng-template #variantActions>
   <ng-container *ngrxLet="viewer$ as viewer">
     <button routerLink="/variants/add/submit"
@@ -30,18 +31,18 @@
       <nz-col nzFlex="64px"
         class="header-icon">
         <i nz-icon
-          nzType="civic:variant"></i>
+          nzType="civic:molecular-profile"></i>
       </nz-col>
       <nz-col nzFlex="600px"
         class="header-description">
         <h2>Variants</h2>
-        <p nz-typography nzEllipsis nzExpandable [nzEllipsisRows]="2">CIViC variants are usually genomic alterations, including single nucleotide variants, insertion/deletion events, copy number alterations, structural variants, and other events that differ from the "normal" genome.</p>
+        <p nz-typography nzEllipsis nzExpandable [nzEllipsisRows]="2">CIViC molecular profiles are... .</p>
       </nz-col>
       <nz-col nzFlex="auto"
         class="header-links">
         <nz-space nzDirection="vertical" class="docs-buttons">
           <a nz-button
-            href="https://civic.readthedocs.io/en/latest/model/variants.html"
+            href="https://civic.readthedocs.io/en/latest/model/molecular_profiles.html"
             target="_blank"
             nzSize="small"
             nzBlock
@@ -49,10 +50,10 @@
             <i nz-icon
               nzType="link"
               nzTheme="outline"></i>
-            View Variant Model Docs
+            View Molecular Profiles Model Docs
         </a>
           <a nz-button
-            href="https://civic.readthedocs.io/en/latest/curating/variants.html"
+            href="https://civic.readthedocs.io/en/latest/curating/molecular_profiles.html"
             target="_blank"
             nzSize="small"
             nzBlock
@@ -60,7 +61,7 @@
             <i nz-icon
               nzType="link"
               nzTheme="outline"></i>
-            View Variant Curation Docs
+            View Molecular Profiles Curation Docs
         </a>
         </nz-space>
       </nz-col>
@@ -68,7 +69,7 @@
     <nz-row>
       <nz-col [nzSpan]="24">
         <div class="content">
-          <cvc-variants-table cvcTitle="Browse All Variants"></cvc-variants-table>
+          <cvc-molecular-profiles-table cvcTitle="Browse All Molecular Profiles"></cvc-molecular-profiles-table>
         </div>
       </nz-col>
     </nz-row>
