--- a/client/src/app/forms2/types/molecular-profile-select/mp-expression-editor/mp-expression-editor.component.less
+++ b/client/src/app/forms2/types/molecular-profile-select/mp-expression-editor/mp-expression-editor.component.less
@@ -22,6 +22,15 @@
   line-height: 26px;
   text-align: right;
 }
-.preview-row {
+.info-row {
   flex-wrap: nowrap;
+}
+.preview-row {
+  padding-top: 6px;
+  flex-wrap: nowrap;
+}
+.action-buttons {
+  button {
+    height: 38px;
+  }
 }
