alert msg w/ select/add buttons displayed if valid MP expression entered

--- a/client/src/app/forms2/types/molecular-profile-select/mp-expression-editor/mp-expression-editor.component.less
+++ b/client/src/app/forms2/types/molecular-profile-select/mp-expression-editor/mp-expression-editor.component.less
@@ -8,10 +8,11 @@
 
 .expression-preview {
     width: 100%;
-    padding: 3px;
-    background-color: #f5f5f5;
-    border: 1px solid #CCCCCC;
-    border-radius: 2px;
+    padding: 8px;
+    margin: 4px 0 8px 0;
+    background-color: #FFF;
+    border: 1px solid #EFEFEF;
+    border-radius: 8px;
     &.active {
       background-color: white;
     }
