--- a/client/src/app/forms2/types/molecular-profile-select/mp-expression-editor/mp-expression-editor.component.html
+++ b/client/src/app/forms2/types/molecular-profile-select/mp-expression-editor/mp-expression-editor.component.html
@@ -51,7 +51,9 @@
             nzShape="round">
             <span
               nz-tooltip
-              [nzTooltipTitle]="'Enter #VID[id] and boolean tokens to construct a Molecular Profile expression.'">
+              [nzTooltipTitle]="
+                'Enter #VID[id] and boolean tokens to construct a Molecular Profile expression.'
+              ">
               <span
                 nz-icon
                 nzType="question-circle"
@@ -66,12 +68,42 @@
         *ngIf="
           !(expressionError$ | ngrxPush) && !(expressionMessage$ | ngrxPush)
         ">
-        <nz-alert
-          nzType="success"
-          [nzMessage]="
-            'Select Molecular Profile by clicking the adjacent button ->'
-          "
-          nzShowIcon></nz-alert>
+        <!-- FOUND EXISTING MP -->
+        <ng-container *ngIf="existingMp$ | ngrxPush as mp">
+          <nz-alert
+            nzType="success"
+            [nzMessage]="'Molecular Profile ' + mp.name + ' found.'"
+            [nzAction]="selectAction"
+            nzShowIcon></nz-alert>
+          <ng-template #selectAction>
+            <button
+              (click)="cvcOnSelect.next(mp)"
+              type="button"
+              nz-button
+              nzType="primary"
+              nzBlock>
+              Select MP
+            </button>
+          </ng-template>
+        </ng-container>
+        <!-- CREATE NEW MP -->
+        <ng-container *ngIf="!(existingMp$ | ngrxPush)">
+          <nz-alert
+            nzType="success"
+            [nzMessage]="'Create new Molecular Profile'"
+            [nzAction]="createAction"
+            nzShowIcon></nz-alert>
+          <ng-template #createAction>
+          <button
+            (click)="onCreateNewMp$.next()"
+            type="button"
+            nz-button
+            nzType="primary"
+            nzBlock>
+            Create New MP
+          </button>
+          </ng-template>
+        </ng-container>
       </ng-container>
     </nz-col>
     <!-- <nz-col
@@ -107,10 +139,7 @@
     [nzGutter]="[6, 6]"
     class="preview-row">
     <!-- preview row -->
-    <nz-col nzFlex="100px">
-      <div class="finder-label">Preview:</div>
-    </nz-col>
-    <nz-col nzFlex="auto">
+    <nz-col nzSpan="24">
       <div
         class="expression-preview"
         [ngClass]="{ active: (expressionSegment$ | ngrxPush) !== undefined }">
@@ -122,7 +151,7 @@
             *ngIf="!segments"
             nz-typography
             nzType="secondary">
-            Preview
+            Valid Molecular Profile expressions will be previewed here.
           </span>
         </ng-container>
       </div>
@@ -131,15 +160,12 @@
 
   <nz-row [nzGutter]="[6, 6]">
     <!-- input textarea -->
-    <nz-col nzFlex="100px">
-      <div class="finder-label">Editor:</div>
-    </nz-col>
-    <nz-col nzFlex="auto">
+    <nz-col nzSpan="24">
       <textarea
         nz-input
         rows="1"
         style="width: 100%"
-        placeholder="Enter #VID[id] and boolean tokens to construct a Molecular Profile expression."
+        placeholder="Enter or edit a Molecular Expression here."
         [ngModel]="inputValue$ | ngrxPush"
         (ngModelChange)="onInputChange$.next($event)"></textarea>
     </nz-col>
